--- a/deliverables/pike/ironic-ui.yaml
+++ b/deliverables/pike/ironic-ui.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: ca9f9f1e9c2baba5415bee2e7961221a3daa6da6
         repo: openstack/ironic-ui
     version: 3.0.2
+  - projects:
+      - hash: 783a3283100d0256e45db4f33a913556416a5bc6
+        repo: openstack/ironic-ui
+    version: 3.0.3
 branches:
   - name: stable/pike
     location: 3.0.0
