--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -147,5 +147,9 @@ releases:
       - hash: b9cf9a7371eec7f20089f51bbd12e78963a10960
         repo: openstack/reno
     version: 2.7.0
+  - projects:
+      - hash: 187d586d5fdaba42d4e6b720ffbfa3b5530d4939
+        repo: openstack/reno
+    version: 2.8.0
 repository-settings:
   openstack/reno: {}
