--- a/deliverables/pike/neutron-lbaas-dashboard.yaml
+++ b/deliverables/pike/neutron-lbaas-dashboard.yaml
@@ -31,6 +31,10 @@ releases:
         repo: openstack/neutron-lbaas-dashboard
     version: 3.0.1
     diff-start: 2.0.0
+  - projects:
+      - hash: b7ee60f71f5ceec67b886de6acf4a9321287cbe4
+        repo: openstack/neutron-lbaas-dashboard
+    version: 3.0.2
 branches:
   - location: 3.0.0.0rc1
     name: stable/pike
