--- a/deliverables/pike/octavia.yaml
+++ b/deliverables/pike/octavia.yaml
@@ -35,6 +35,10 @@ releases:
         repo: openstack/octavia
     version: 1.0.1
     diff-start: 0.10.0
+  - projects:
+      - hash: 5c2d2d2e5c665312f380061ddaead6d7d47d9737
+        repo: openstack/octavia
+    version: 1.0.2
 branches:
   - location: 1.0.0.0rc1
     name: stable/pike
