--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -31,6 +31,10 @@ releases:
       - hash: 03666efc505b931c3f0b7473dd18782548c13da8
         repo: openstack/octavia-dashboard
     version: 1.0.0
+  - projects:
+      - hash: e68da46f599d1f8a76e7fd9ebec69548a5c49880
+        repo: openstack/octavia-dashboard
+    version: 1.0.1
 branches:
   - location: 1.0.0.0rc1
     name: stable/queens
