--- a/deliverables/queens/octavia.yaml
+++ b/deliverables/queens/octavia.yaml
@@ -32,6 +32,10 @@ releases:
       - hash: 08387c78c897c97aad72f3eb6ae0702fbc9a3058
         repo: openstack/octavia
     version: 2.0.0
+  - projects:
+      - hash: 733e683c8606688b9b1f66283f1b35f3e3c1de57
+        repo: openstack/octavia
+    version: 2.0.1
 branches:
   - location: 2.0.0.0rc1
     name: stable/queens
