tripleo/paunch: release 2.5.0 (Queens)
Change-Id: Id7aff4e31d16d7159c9a04c5ba6e483f6883fd09

--- a/deliverables/queens/paunch.yaml
+++ b/deliverables/queens/paunch.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: 5697cbe9d946b6244f7e53f7c29e9c95ee4539b3
         repo: openstack/paunch
     version: 2.4.0
+  - projects:
+      - hash: e1b6ae7c13c530ee1c358df5e32d4b23868b1e1b
+        repo: openstack/paunch
+    version: 2.5.0
 repository-settings:
   openstack/paunch: {}
 release-notes: https://docs.openstack.org/releasenotes/paunch/queens.html
