tripleo/paunch: release 3.0.0 (Rocky)
Change-Id: I8ff5d8d1ea79eca417f9a7f7418a4cafa4b2af33

--- a/deliverables/rocky/paunch.yaml
+++ b/deliverables/rocky/paunch.yaml
@@ -4,5 +4,10 @@ release-model: cycle-trailing
 release-type: python-pypi
 team: tripleo
 type: other
+releases:
+  - projects:
+      - hash: 9348078452965b54ef5337913ac602e4194b7796
+        repo: openstack/paunch
+    version: 3.0.0
 repository-settings:
   openstack/paunch: {}
