--- a/deliverables/queens/python-glanceclient.yaml
+++ b/deliverables/queens/python-glanceclient.yaml
@@ -14,6 +14,10 @@ releases:
       - hash: b982516fc14ad26ae1c9eb6124130b655d169527
         repo: openstack/python-glanceclient
     version: 2.9.1
+  - projects:
+      - hash: b5afe03ecd3cb25bf09232a803d91c4c5ff06f6c
+        repo: openstack/python-glanceclient
+    version: 2.10.0
 team: glance
 type: client-library
 release-notes: https://docs.openstack.org/releasenotes/python-glanceclient/queens.html
