--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: ca9bf2d1c56605a565ffc468bb91fb5d58ef5ce9
         repo: openstack/cinder
     version: 12.0.0
+  - projects:
+      - hash: bc76abef28b34723abdbd29881553a1af94b024b
+        repo: openstack/cinder
+    version: 12.0.1
 cycle-highlights:
   - 'Support for attaching a single Cinder volume to multile VM instances.'
   - 'Add ability to report backend state in service list.'
