--- a/deliverables/queens/manila.yaml
+++ b/deliverables/queens/manila.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: be8580b350c34c91494cb553eb15e6b61ef250b7
         repo: openstack/manila
     version: 6.0.0
+  - projects:
+      - hash: b1682a7902f81ea55e621dd8cce849d945315959
+        repo: openstack/manila
+    version: 6.0.1
 cycle-highlights:
   - |
     Added drivers for Infinidat, MapR-FS, and Veritas
