Oslo releases for 2018-4-10
Change-Id: Iaabba0b12dde606e46cfb809bd956aaf10228109

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -80,5 +80,9 @@ releases:
       - hash: 7b0374d680d50c67112e1220761a1a68d6606b48
         repo: openstack-dev/pbr
     version: 4.0.1
+  - projects:
+      - hash: 7767c44ab1289ed7d1cc4f9e12986bef07865d5c
+        repo: openstack-dev/pbr
+    version: 4.0.2
 repository-settings:
   openstack-dev/pbr: {}
