--- a/deliverables/rocky/oslo.log.yaml
+++ b/deliverables/rocky/oslo.log.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 3c78c37ab3d7c2f6ec43755a1acd21f15f818505
         repo: openstack/oslo.log
     version: 3.37.0
+  - projects:
+      - hash: 110191aa505cfefafee1c8579213b2f9c3397b6c
+        repo: openstack/oslo.log
+    version: 3.38.0
