--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 222a939361579f73fb33a51580fd2ed4d28decb3
         repo: openstack/oslo.messaging
     version: 6.0.0
+  - projects:
+      - hash: b0776c515d0e14cd2c524d0a231f9897869c3234
+        repo: openstack/oslo.messaging
+    version: 6.1.0
