--- a/deliverables/rocky/oslo.versionedobjects.yaml
+++ b/deliverables/rocky/oslo.versionedobjects.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 67f8f5fd4e3706c3aa7cf3c3f8aac822715420df
         repo: openstack/oslo.versionedobjects
     version: 1.32.0
+  - projects:
+      - hash: 5774995c3cfc3b6393f1175680d44662b2d9e2e4
+        repo: openstack/oslo.versionedobjects
+    version: 1.33.0
