--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: b6cfa2905511fef1f0f179baeadde0b2a2724487
         repo: openstack/oslo.config
     version: 6.0.1
+  - projects:
+      - hash: 0aedd366847c20539ef7d16824e668794d41b49b
+        repo: openstack/oslo.config
+    version: 6.0.2
