--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: d086567bc2dff80db2b5383cce7aae1818d0ead4
         repo: openstack/oslo.service
     version: 1.30.0
+  - projects:
+      - hash: 55e0fd8f7120032dbf66ef357a91e449aca0a501
+        repo: openstack/oslo.service
+    version: 1.31.0
