--- a/deliverables/rocky/python-glanceclient.yaml
+++ b/deliverables/rocky/python-glanceclient.yaml
@@ -2,6 +2,11 @@
 include-pypi-link: yes
 launchpad: python-glanceclient
 release-model: cycle-with-intermediary
+releases:
+  - projects:
+      - hash: 314a29f6a6e64f69fd07fd5a0fdcf7aeb5574c1b
+        repo: openstack/python-glanceclient
+    version: 2.11.0
 team: glance
 type: client-library
 repository-settings:
