--- a/deliverables/queens/monasca-agent.yaml
+++ b/deliverables/queens/monasca-agent.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: bd1bc077c54fb7f160c41ea1bbc80cec92fc6964
         repo: openstack/monasca-agent
     version: 2.6.1
+  - projects:
+      - hash: 6a3935e5f4f42251979a403b8e9bbe61ed67214a
+        repo: openstack/monasca-agent
+    version: 2.6.2
 branches:
   - location: 2.6.0
     name: stable/queens
