Add release 1.1.0 for hacking
This release mainly include below 2 changes:
- https://review.openstack.org/#/c/514934/
- https://review.openstack.org/#/c/512902/

Change-Id: I049048769f1f331f950563f94e2b5b8717f1105b

--- a/deliverables/_independent/hacking.yaml
+++ b/deliverables/_independent/hacking.yaml
@@ -116,5 +116,9 @@ releases:
     projects:
       - repo: openstack-dev/hacking
         hash: d842b77cab8ea1ac76c006b7d99455c835475549
+  - version: 1.1.0
+    projects:
+      - repo: openstack-dev/hacking
+        hash: 0a43156fab3ca870334098afd1914b5e0bdbc3e6
 repository-settings:
   openstack-dev/hacking: {}
