--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -597,6 +597,90 @@ releases:
         hash: ed8e178c38a28cab87b8d9bd4396caccf8c0e790
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: d401a62d2f8ff7c8e6924b6fae0086e47ab37fa6
+  - version: 17.0.2
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 2bdc44499ba81d3a519bb23fceca3096df62f27c
+      - repo: openstack/ansible-hardening
+        hash: 3f870c24f9bcd88ec1f1d7815c30cf2abfac39e5
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: b488ec5ee3092ba5b6765b5888c9ad2e44922ec5
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 78e615c712771e33c1a7436e05bc91644318ece1
+      - repo: openstack/openstack-ansible-galera_client
+        hash: d1dbac2ce9a0bf6aa96fa254bd612e9c3f4becfa
+      - repo: openstack/openstack-ansible-galera_server
+        hash: 0731d67069b36cd1f630a98dfe44582413993041
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 50ea8b644c0713d007f6f172cd7bbc850f44a55a
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: 0c0c9453e8760fcbb0a126e6c97de83f004ae06b
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: ecc003357cbc2e36430bf8af09e0e6f2acc738c9
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: 0cf0e283dbd2e3b1b619ee6f0f9375ef00ca8327
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 67ff6cd34d8158dde56a7a59b8ccbdd079effde5
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: 6b4a115ab0fba9dba8273691cb2c22bca926f7c4
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: 705f58fb0b3bd3599e3265a982d7d6235a2d2d8d
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: e86c73ef9af547b30a4aab0d39aca96359bf5ce4
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: 75c8a1f07c0b0f8e8baa68198be789efd453183e
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: bd8b72cb68c2629f3d1c032f315eb9c25931920e
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: c9b2115cf7c38a5861a8126d45eddef9ea03d1ad
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: 948305aa6bfeeb2abdda7351aa0a8ff292810e56
+      - repo: openstack/openstack-ansible-os_designate
+        hash: b1a08cc7e897e5b600415a69280a64f8f61dd66c
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 9f2aa6478dadab3a4ec0cee6d23ffc86fa76a99b
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 5beb9ca451812959f09c9f9235eee529c42b3805
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 7eff32af7fae96096694d582589389c66d10a8a3
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: ea9a27931e6d7f22df23ea02e1c0938ba576fada
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: 8c33498070489e2ff645cc1286df535e2b16726b
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 06087d8d193f4985ed8c33e996b02fa717628c27
+      - repo: openstack/openstack-ansible-os_molteniron
+        hash: 5102381790218c390438011f64e763016d335c61
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 4bbb681632f2d577585905982d81fa019332f993
+      - repo: openstack/openstack-ansible-os_nova
+        hash: ad9bcb08150db26c09150f0ed5442522ad4de53b
+      - repo: openstack/openstack-ansible-os_octavia
+        hash: 06389a51e9bc69c435a8ad951193c3c5ea2aa985
+      - repo: openstack/openstack-ansible-os_rally
+        hash: 083bbb8c1290506797d49c51ee91a344a481d25c
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: 9b5111884ebd64ec8088bbdfb3b9a58cdabf1edb
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 8f2693552648736353ad00f745905e4ec86bdc7d
+      - repo: openstack/openstack-ansible-os_tacker
+        hash: d4acca1ce9ec3ce0c599a3424fa3c92ee318d270
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: e18b1be1cf57b1f086a7143dc7a025a2f5b81de3
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 6cd21b625d9f3da5c537e98064f67001173c9174
+      - repo: openstack/openstack-ansible-plugins
+        hash: cecb9e78fe0b854334cf4e1e2e48abf17d8dddc9
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: cffd1ebd45e20331ee505568cd34c277d3225138
+      - repo: openstack/openstack-ansible-repo_build
+        hash: 0e50a282b09f62670494ada2f7d42509c148067f
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 65f66308234bad2da0b1d091e685de98a9b28308
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: ed8e178c38a28cab87b8d9bd4396caccf8c0e790
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: d401a62d2f8ff7c8e6924b6fae0086e47ab37fa6
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
