--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1318,6 +1318,88 @@ releases:
         hash: 693255ee40a2908707fcc962d620d68008647a57
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: fa201bbadeb959f363ecba7046f052b2ee16e474
+  - version: 16.0.11
+    projects:
+      - repo: openstack/openstack-ansible
+        hash: 53663ba31bc186d2cba77c9bdf183e0820d8c65b
+      - repo: openstack/ansible-hardening
+        hash: cee2e0b5b432c50614b908d9bf50ed2cc32d8daa
+      - repo: openstack/openstack-ansible-apt_package_pinning
+        hash: 956e06cf66bd878b132c58bdd97304749c0da189
+      - repo: openstack/openstack-ansible-pip_install
+        hash: 56c4a325b2a4d88277b75b2aff729b796035ef88
+      - repo: openstack/openstack-ansible-galera_client
+        hash: ca1ee798b74b6e1c7667e608334f1ac5a14087bb
+      - repo: openstack/openstack-ansible-galera_server
+        hash: fabfbd99a287b9fb85cc9269d58f1d12fa085373
+      - repo: openstack/openstack-ansible-ceph_client
+        hash: 6dd85991b2d052b58305a0ebb6984d9b29c263d9
+      - repo: openstack/openstack-ansible-haproxy_server
+        hash: aacaaed2e36945baa7fb9e8bd6ceb8393dad3730
+      - repo: openstack/openstack-ansible-lxc_container_create
+        hash: 7650d0836bdefbd4903e52c61338b317c3b5aec2
+      - repo: openstack/openstack-ansible-lxc_hosts
+        hash: 49d5112d7b0c415299dd0c6defc47fac4520f162
+      - repo: openstack/openstack-ansible-memcached_server
+        hash: 2c8cd40e18902b9aa6fab87e9fd299d437ed0a78
+      - repo: openstack/openstack-ansible-openstack_hosts
+        hash: deb8d59ff40d9f828172933df6028202e6c9fb04
+      - repo: openstack/openstack-ansible-os_keystone
+        hash: a7f57f5afe363b58304f61a0bbd9e053e786a93c
+      - repo: openstack/openstack-ansible-openstack_openrc
+        hash: 452a227ea5cf50611832cd289e163d577791407a
+      - repo: openstack/openstack-ansible-os_aodh
+        hash: 0321e0bae7050b97fa8e3d66033fe177c31e2d63
+      - repo: openstack/openstack-ansible-os_barbican
+        hash: 06ef75aa9aa9bd126bd17ab86a7c38f44d901203
+      - repo: openstack/openstack-ansible-os_ceilometer
+        hash: 874f5f7f20f3a85fbf1607281d1afe4742557c76
+      - repo: openstack/openstack-ansible-os_cinder
+        hash: 9173876f6bfc5e2955d74628b32f5cff2e9e39c3
+      - repo: openstack/openstack-ansible-os_designate
+        hash: dd13917240c7dc9fff9df7e042ba32fb002838ce
+      - repo: openstack/openstack-ansible-os_glance
+        hash: 97d19586aa7437ffee35d1cf46eb13bc00949c40
+      - repo: openstack/openstack-ansible-os_gnocchi
+        hash: 58f8783529e219e9605fe5dc35af3bdd98c17227
+      - repo: openstack/openstack-ansible-os_heat
+        hash: 06d67c2b001ce62aaa301440d63e5226ffe334af
+      - repo: openstack/openstack-ansible-os_horizon
+        hash: af4abbad26b4ab9ce3c50266bc212199e3e6aea8
+      - repo: openstack/openstack-ansible-os_ironic
+        hash: 91abf2ec56b9b4337e5e98d9ba6f2c04155331a1
+      - repo: openstack/openstack-ansible-os_magnum
+        hash: 04b1da5eea91dbc981f581e3b0dee64c48516d77
+      - repo: openstack/openstack-ansible-os_molteniron
+        hash: 0506e3c3f511518cbd5e7499e2a675b25d4ac967
+      - repo: openstack/openstack-ansible-os_neutron
+        hash: 360c9f9e60a3930028fe58866c2a90f36fa1979b
+      - repo: openstack/openstack-ansible-os_nova
+        hash: 4fadee7f0dd418d6722ee94bf67e927958a2c096
+      - repo: openstack/openstack-ansible-os_octavia
+        hash: b86823c0c3d9f3b5ed744eeed50c4c50b849d672
+      - repo: openstack/openstack-ansible-os_rally
+        hash: c91eb6cc61a1f4c2136084e0df758eed117f1bbb
+      - repo: openstack/openstack-ansible-os_sahara
+        hash: c2ad98dcda096c34e9b63d4e44c9a231ed093fb4
+      - repo: openstack/openstack-ansible-os_swift
+        hash: 71fb3dc58bc673ccbcf367ab613641fedd245e8e
+      - repo: openstack/openstack-ansible-os_tempest
+        hash: ab0d01abcee9938593e40ba7183d6abcb101fede
+      - repo: openstack/openstack-ansible-os_trove
+        hash: 0d7ad12f341a7f828ce79c3f9c6a03745a0fe565
+      - repo: openstack/openstack-ansible-plugins
+        hash: 542835cb502856f6aa4b59c0c9565fdb3061de39
+      - repo: openstack/openstack-ansible-rabbitmq_server
+        hash: 44f63d92dc3d0555dcf2c8ff587f4c4e09b10fdc
+      - repo: openstack/openstack-ansible-repo_build
+        hash: 475d9efc075fdd078a226fcdf7e4f92a5855507e
+      - repo: openstack/openstack-ansible-repo_server
+        hash: 63c6537fcb7fa688e1e82074ea958b9349f58cc7
+      - repo: openstack/openstack-ansible-rsyslog_client
+        hash: 693255ee40a2908707fcc962d620d68008647a57
+      - repo: openstack/openstack-ansible-rsyslog_server
+        hash: fa201bbadeb959f363ecba7046f052b2ee16e474
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
