--- a/deliverables/rocky/storlets.yaml
+++ b/deliverables/rocky/storlets.yaml
@@ -2,6 +2,11 @@
 launchpad: storlets
 team: storlets
 type: service
-release-model: cycle-with-intermediary
+release-model: cycle-with-milestones
+releases:
+  - version: 2.0.0.0b1
+    projects:
+      - repo: openstack/storlets
+        hash: a8b61f9961417ab4e8386550afd9fed836b1c376
 repository-settings:
   openstack/storlets: {}
