--- a/deliverables/rocky/release-test.yaml
+++ b/deliverables/rocky/release-test.yaml
@@ -12,3 +12,8 @@ releases:
         repo: openstack/release-test
         tarball-base: openstack-release-test
     version: 0.13.0
+  - projects:
+      - hash: 86fa0da38cd59cd085ab7fb417832072da7354e9
+        repo: openstack/release-test
+        tarball-base: openstack-release-test
+    version: 0.14.0
