Oslo releases for 2018-4-16
About half are just eventlet uncaps, plus the usual assortment of
new features and bugfixes.

Change-Id: I456fd15c9441bf9ba07515b49e4d96c3dacb4610

--- a/deliverables/rocky/oslo.concurrency.yaml
+++ b/deliverables/rocky/oslo.concurrency.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 5b42d276350666410a7d010a5152467ad509d3f9
         repo: openstack/oslo.concurrency
     version: 3.26.0
+  - projects:
+      - hash: 2429c4c4f04102dcad3388bfaa8cdf5dc12bcf0f
+        repo: openstack/oslo.concurrency
+    version: 3.27.0
