--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: 0aedd366847c20539ef7d16824e668794d41b49b
         repo: openstack/oslo.config
     version: 6.0.2
+  - projects:
+      - hash: 84655714b656c8296bfd70aeb5daf5996e1f5add
+        repo: openstack/oslo.config
+    version: 6.1.0
