--- a/deliverables/rocky/oslo.db.yaml
+++ b/deliverables/rocky/oslo.db.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: acd1ceb69906b8357ec7c60257651d4731aad08e
         repo: openstack/oslo.db
     version: 4.35.0
+  - projects:
+      - hash: 2b2514603f5cb721e922f639e73a5ed75bb0c12b
+        repo: openstack/oslo.db
+    version: 4.36.0
