--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: b0776c515d0e14cd2c524d0a231f9897869c3234
         repo: openstack/oslo.messaging
     version: 6.1.0
+  - projects:
+      - hash: 3503cf687e200fa98cf009a874c2f258a161f5a5
+        repo: openstack/oslo.messaging
+    version: 6.2.0
