--- a/deliverables/rocky/oslo.reports.yaml
+++ b/deliverables/rocky/oslo.reports.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: eb3d36a0b4bf10680a04c73d40e86465953416e9
         repo: openstack/oslo.reports
     version: 1.27.0
+  - projects:
+      - hash: d743d0183a0166ae8bef56b6721f0ba48c73aeab
+        repo: openstack/oslo.reports
+    version: 1.28.0
