--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 55e0fd8f7120032dbf66ef357a91e449aca0a501
         repo: openstack/oslo.service
     version: 1.31.0
+  - projects:
+      - hash: 9091986228de7bc87d3e70565c9ab0c53b0b8af1
+        repo: openstack/oslo.service
+    version: 1.31.1
