--- a/deliverables/rocky/oslo.versionedobjects.yaml
+++ b/deliverables/rocky/oslo.versionedobjects.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 5774995c3cfc3b6393f1175680d44662b2d9e2e4
         repo: openstack/oslo.versionedobjects
     version: 1.33.0
+  - projects:
+      - hash: 29e643e4a93333866b33965b68fc8dfb8acf30fa
+        repo: openstack/oslo.versionedobjects
+    version: 1.33.1
