--- a/deliverables/rocky/oslo.vmware.yaml
+++ b/deliverables/rocky/oslo.vmware.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: a331a289b0c8e3e070f7ffc15774cf150dfd0094
         repo: openstack/oslo.vmware
     version: 2.27.0
+  - projects:
+      - hash: 1f2639133830ef294a71bc0e516c9b5b0eb4fd19
+        repo: openstack/oslo.vmware
+    version: 2.28.0
