--- a/deliverables/rocky/oslo.rootwrap.yaml
+++ b/deliverables/rocky/oslo.rootwrap.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/oslo.rootwrap: {}
+releases:
+  - projects:
+      - hash: 5a37cb77b4ce6caf63225fb805c9229f3fb80a9d
+        repo: openstack/oslo.rootwrap
+    version: 5.14.0
