--- a/deliverables/queens/zaqar-ui.yaml
+++ b/deliverables/queens/zaqar-ui.yaml
@@ -26,6 +26,10 @@ releases:
       - repo: openstack/zaqar-ui
         hash: ffa0c5d512ff49698a53e491aa9e7747d92930f2
     version: 4.0.0
+  - projects:
+      - repo: openstack/zaqar-ui
+        hash: dc37badd740413a6fc0bdd02b2f5b34081ca78d7
+    version: 4.0.1
 branches:
   - location: 4.0.0.0rc1
     name: stable/queens
