--- a/deliverables/rocky/neutron-dynamic-routing.yaml
+++ b/deliverables/rocky/neutron-dynamic-routing.yaml
@@ -6,3 +6,8 @@ release-model: cycle-with-milestones
 release-type: neutron
 repository-settings:
   openstack/neutron-dynamic-routing: {}
+releases:
+  - projects:
+      - hash: 04bcb0853c9cf1afd67705b63cbe6e36a2e300a4
+        repo: openstack/neutron-dynamic-routing
+    version: 13.0.0.0b1
