--- a/deliverables/rocky/neutron.yaml
+++ b/deliverables/rocky/neutron.yaml
@@ -5,3 +5,8 @@ type: service
 release-model: cycle-with-milestones
 repository-settings:
   openstack/neutron: {}
+releases:
+  - projects:
+      - hash: 4d40e6e40e6c02d097c41ee68ec1b885b27e8909
+        repo: openstack/neutron
+    version: 13.0.0.0b1
