--- a/deliverables/ocata/monasca-ui.yaml
+++ b/deliverables/ocata/monasca-ui.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: 201f1ca2b57bbd0e17d6ce254a9c0c783b660eb6
         repo: openstack/monasca-ui
     version: 1.5.2
+  - projects:
+      - hash: a5342f9681d866d6727bd7012a56306c83479ba7
+        repo: openstack/monasca-ui
+    version: 1.5.3
 repository-settings:
   openstack/monasca-ui: {}
