Freezer deliverables for rocky-1
   * freezer
   * freezer-api
   * freezer-web-ui
   * freezer-dr
   * python-freezerclient

Change-Id: I4aa9507950ea5818584180723a6a7fd822e412ff

--- a/deliverables/rocky/freezer-web-ui.yaml
+++ b/deliverables/rocky/freezer-web-ui.yaml
@@ -6,3 +6,8 @@ team: freezer
 type: horizon-plugin
 repository-settings:
   openstack/freezer-web-ui: {}
+releases:
+  - version: 7.0.0.0b1
+    projects:
+      - repo: openstack/freezer-web-ui
+        hash: e68011ed5f05846527883d4dd6e216cccc9c2ff2
