--- a/deliverables/queens/neutron-dynamic-routing.yaml
+++ b/deliverables/queens/neutron-dynamic-routing.yaml
@@ -30,6 +30,10 @@ releases:
       - hash: 5f53893e50c602f8a29aefe6efc29957f0cc4816
         repo: openstack/neutron-dynamic-routing
     version: 12.0.0
+  - projects:
+      - hash: a29018ba87b18828c52326030413bc5e55f3668b
+        repo: openstack/neutron-dynamic-routing
+    version: 12.0.1
 repository-settings:
   openstack/neutron-dynamic-routing: {}
 branches:
