TripleO rocky milestone 1 release
Note: for THT, we accidentely pushed 9.0.0.0b1 in Queens:
https://review.openstack.org/#/c/556579/3/deliverables/queens/tripleo-heat-templates.yaml

So this time we push 9.0.0.0b2 to be higher.

Also fixing release-model that were generated for Rocky.

Change-Id: I40264d63a6e06a93623a8cd54ed78999f130abd0

--- a/deliverables/rocky/instack.yaml
+++ b/deliverables/rocky/instack.yaml
@@ -6,3 +6,8 @@ team: tripleo
 type: library
 repository-settings:
   openstack/instack: {}
+releases:
+  - projects:
+      - hash: 334137855e4f7fd8b5f3d201f7876fed35721bc1
+        repo: openstack/instack
+    version: 9.0.0
