--- a/deliverables/rocky/tripleo-image-elements.yaml
+++ b/deliverables/rocky/tripleo-image-elements.yaml
@@ -6,3 +6,8 @@ team: tripleo
 type: other
 repository-settings:
   openstack/tripleo-image-elements: {}
+releases:
+  - projects:
+      - hash: 950a63f77c8c9da9ce6c7fccb80fabd980a4e4bc
+        repo: openstack/tripleo-image-elements
+    version: 9.0.0.0b1
