--- a/deliverables/rocky/instack-undercloud.yaml
+++ b/deliverables/rocky/instack-undercloud.yaml
@@ -1,8 +1,13 @@
 ---
 launchpad: tripleo
-release-model: cycle-trailing
+release-model: cycle-with-intermediary
 release-type: python-pypi
 team: tripleo
 type: other
 repository-settings:
   openstack/instack-undercloud: {}
+releases:
+  - projects:
+      - hash: aa453c7c78b6b9dbefe3470b4588a66b8cff57f6
+        repo: openstack/instack-undercloud
+    version: 9.0.0
