--- a/deliverables/rocky/os-apply-config.yaml
+++ b/deliverables/rocky/os-apply-config.yaml
@@ -1,8 +1,13 @@
 ---
 launchpad: os-apply-config
-release-model: cycle-trailing
+release-model: cycle-with-intermediary
 release-type: python-pypi
 team: tripleo
 type: other
 repository-settings:
   openstack/os-apply-config: {}
+releases:
+  - projects:
+      - hash: 9124f56fac1354d63b1dc7759340e34a494c6569
+        repo: openstack/os-apply-config
+    version: 9.0.0
