--- a/deliverables/rocky/os-refresh-config.yaml
+++ b/deliverables/rocky/os-refresh-config.yaml
@@ -1,8 +1,13 @@
 ---
 launchpad: os-refresh-config
-release-model: cycle-trailing
+release-model: cycle-with-intermediary
 release-type: python-pypi
 team: tripleo
 type: other
 repository-settings:
   openstack/os-refresh-config: {}
+releases:
+  - projects:
+      - hash: cf2d98460ddd01f000f2151b98e618b1e13e082c
+        repo: openstack/os-refresh-config
+    version: 9.0.0
