Trove releases for Rocky milestone-1
Change-Id: I442218835f6d1d4550f4d1552e74cae71bf10adc
Signed-off-by: Zhao Chao <zhaochao1984@gmail.com>

--- a/deliverables/rocky/python-troveclient.yaml
+++ b/deliverables/rocky/python-troveclient.yaml
@@ -6,3 +6,8 @@ team: trove
 type: client-library
 repository-settings:
   openstack/python-troveclient: {}
+releases:
+  - projects:
+      - hash: 1dd0c2e26f426f05a9efc7110f359ba9554a7bf9
+        repo: openstack/python-troveclient
+    version: 2.15.0
