--- a/deliverables/rocky/trove.yaml
+++ b/deliverables/rocky/trove.yaml
@@ -5,3 +5,8 @@ team: trove
 type: service
 repository-settings:
   openstack/trove: {}
+releases:
+  - projects:
+      - hash: 48ac45dae1488491c0ddcf5e2fae3772e4833208
+        repo: openstack/trove
+    version: 10.0.0.0b1
