--- a/deliverables/_independent/openstack-doc-tools.yaml
+++ b/deliverables/_independent/openstack-doc-tools.yaml
@@ -88,5 +88,9 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 6a568b9aaf70a1412507fb7e49cd92a9a4183140
+  - version: 1.8.0
+    projects:
+      - repo: openstack/openstack-doc-tools
+        hash: bb24cc4ec5bb0d576763520dc4b094a211f95ea7
 repository-settings:
   openstack/openstack-doc-tools: {}
