Tag ceilometer-powervm 6.0.1
Requests a tag for ceilometer-powervm 6.0.1.

Change-Id: I9e6f5998a339c8ffb1fa302ca7486baa1495acd8

--- a/deliverables/queens/ceilometer-powervm.yaml
+++ b/deliverables/queens/ceilometer-powervm.yaml
@@ -28,5 +28,9 @@ releases:
       - repo: openstack/ceilometer-powervm
         hash: a31d0fa44ac64e6168e86956c6ba17dcdae2dfd3
     version: 6.0.0
+  - projects:
+      - repo: openstack/ceilometer-powervm
+        hash: a29ca2b75ed3a4cdd6e725f1f6a1d8e026e1771d
+    version: 6.0.1
 repository-settings:
   openstack/ceilometer-powervm: {}
