Octavia projects Rocky MS1 release
Change-Id: I6a1387873699df2405303b861016b77b3986d083

--- a/deliverables/rocky/neutron-lbaas-dashboard.yaml
+++ b/deliverables/rocky/neutron-lbaas-dashboard.yaml
@@ -7,3 +7,8 @@ team: octavia
 type: horizon-plugin
 repository-settings:
   openstack/neutron-lbaas-dashboard: {}
+releases:
+  - projects:
+      - hash: e6da9ade502458258c565e36813f7d099234eba2
+        repo: openstack/neutron-lbaas-dashboard
+    version: 5.0.0.0b1
