--- a/deliverables/queens/heat.yaml
+++ b/deliverables/queens/heat.yaml
@@ -32,6 +32,10 @@ releases:
       - repo: openstack/heat
         hash: 43f122be13736f15fbc38cb6e6ce29545f784c86
     version: 10.0.0
+  - version: 10.0.1
+    projects:
+      - repo: openstack/heat
+        hash: 825731d81b6cba5d79cbab22a731965ff4f9c6a0
 repository-settings:
   openstack/heat: {}
 release-notes: https://docs.openstack.org/releasenotes/heat/queens.html
