--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -45,5 +45,9 @@ releases:
     projects:
       - repo: openstack/heat
         hash: cda1cf15f4a20355c58bd26e2f4ce00007a15266
+  - version: 9.0.4
+    projects:
+      - repo: openstack/heat
+        hash: 882c201809f7d21967d97653db357f4115105d5f
 repository-settings:
   openstack/heat: {}
