--- a/deliverables/rocky/manila.yaml
+++ b/deliverables/rocky/manila.yaml
@@ -3,5 +3,10 @@ launchpad: manila
 release-model: cycle-with-milestones
 team: manila
 type: service
+releases:
+  - version: 7.0.0.0b1
+    projects:
+      - repo: openstack/manila
+        hash: f1b20cd4a98891d5d63053e9e598232eb3160879
 repository-settings:
   openstack/manila: {}
