--- a/deliverables/rocky/python-watcherclient.yaml
+++ b/deliverables/rocky/python-watcherclient.yaml
@@ -6,3 +6,8 @@ team: watcher
 type: client-library
 repository-settings:
   openstack/python-watcherclient: {}
+releases:
+  - version: 1.7.0
+    projects:
+      - repo: openstack/python-watcherclient
+        hash: 673905feadaf43ba335d5d873d3f2599eb77de5a
